Version 5.9.4
- Added some error checking for parameters of CPU/coginit/cognew
- Fixed Spin2 round(), trunc(), and float() operators for variable expressions
- Fixed multiply by -1 when local variables are on the stack
- Fixed expansion of macros which contain other macros
- Fixed ABORT in Spin functions with no return statements
- Implemented subset of try/catch for C++
- Various improvements to the nu code backend

Version 5.9.3
- Fixed automatic detection of floats for printf/scanf
- Fixed optimizer errors on SCA, XORO32, and similar instructions
- Fixed a spurious warning about 0-0 in inline assembly
- Implemented new Spin2 floating point operations
- Prevent loops containing BRK from being optimized to REP
- Started to add some optimizations for Nu

Version 5.9.2
- Added internal definition for the BASIC number$ function
- Added experimental flag -2nu for P2 interpreter (not working much yet)
- Fixed some "backwards" repeat loops in Spin
- Fixed wrap around of getus and getms
- Fixed an optimizer bug around non-leaf functions in COG and LUT
- Fixed a problem finding extensions in -Wabs-paths
- Fixed definitions of if_x1 and if_1x condition codes
- Handled '+' and ' ' format characters in builtin printf
- Improved detection of some keywords like ASM in old code
- Improved output of expressions in DEBUG()
- New flag -gbrk for using Chip's BRK based debug output (Thanks Ada!)

Version 5.9.1
- Added support for bool, false, and true to C++
- Added some missing defines in stdint.h
- Added automatic I/O locking for PRINT, __builtin_printf, and DEBUG
- Added ability to have multiple items in BASIC CASE 
- Added "ASM_CONST" keyword to Spin
- Added optimization for x==x in integer code
- Added check for re-defining member variables in classes
- Added _SameTypes() and _HasMethod() functions to BASIC to check data types
- Changed "ASM CONST" to "CONST ASM" in BASIC
- Fixed multiple assignments in Spin (a:=b:=c) to have the same semantics as Spin