@@ -126,7 +126,11 @@ extern int gl_p2;      /* set for P2 output */
 # define P2_REV_B 2
 #define DEFAULT_P2_VERSION P2_REV_B
 
-extern int gl_isutf8;     /* using UTF-8 encoding */
+extern int gl_src_charset; /* source character set */
+extern int gl_run_charset; /* runtime character set */
+#define CHARSET_UTF8     0
+#define CHARSET_LATIN1   1
+#define CHARSET_PARALLAX 2
 extern int gl_have_lut; /* are there any functions placed in LUT? */
 extern int gl_output;  /* type of output to produce */
 extern int gl_outputflags; /* modifiers (e.g. LMM or COG code */
