@@ -90,6 +90,33 @@ SymbolTable pasmWords;
 SymbolTable pasmInstrWords;
 SymbolTable ckeywords;
 
+unsigned int parallax_oem[] = {
+    0xF000,0xF001,0x2190,0x2192,0x2191,0x2193,0x25C0,0x25B6,0xF008,0xF009,0xF00A,0xF00B,0xF00C,0xF00D,0x2023,0x2022,
+    0x0394,0x03C0,0x03A3,0x03A9,0x2248,0x221A,0xF016,0xF017,0xF018,0xF019,0xF01A,0xF01B,0xF01C,0xF01D,0xF01E,0xF01F,
+    0x0020,0x0021,0x0022,0x0023,0x0024,0x0025,0x0026,0x0027,0x0028,0x0029,0x002A,0x002B,0x002C,0x002D,0x002E,0x002F,
+    0x0030,0x0031,0x0032,0x0033,0x0034,0x0035,0x0036,0x0037,0x0038,0x0039,0x003A,0x003B,0x003C,0x003D,0x003E,0x003F,
+    0x0040,0x0041,0x0042,0x0043,0x0044,0x0045,0x0046,0x0047,0x0048,0x0049,0x004A,0x004B,0x004C,0x004D,0x004E,0x004F,
+    0x0050,0x0051,0x0052,0x0053,0x0054,0x0055,0x0056,0x0057,0x0058,0x0059,0x005A,0x005B,0x005C,0x005D,0x005E,0x005F,
+    0x0060,0x0061,0x0062,0x0063,0x0064,0x0065,0x0066,0x0067,0x0068,0x0069,0x006A,0x006B,0x006C,0x006D,0x006E,0x006F,
+    0x0070,0x0071,0x0072,0x0073,0x0074,0x0075,0x0076,0x0077,0x0078,0x0079,0x007A,0x007B,0x007C,0x007D,0x007E,0xF07F,
+    0xF080,0xF081,0xF082,0xF083,0xF084,0xF085,0xF086,0xF087,0xF088,0xF089,0xF08A,0xF08B,0xF08C,0xF08D,0xF08E,0xF08F,
+    0x2500,0x2502,0x253C,0x254B,0x2524,0x251C,0x2534,0x252C,0x252B,0x2523,0x253B,0x2533,0x2518,0x2514,0x2510,0x250C,
+    0xF0A0,0x00A1,0xF0A2,0x00A3,0x20AC,0x00A5,0xF0A6,0xF0A7,0xF0A8,0xF0A9,0xF0AA,0xF0AB,0xF0AC,0xF0AD,0xF0AE,0xF0AF,
+    0x00B0,0x00B1,0x00B2,0x00B3,0xF0B4,0x00B5,0xF0B6,0xF0B7,0xF0B8,0x00B9,0xF0BA,0xF0BB,0xF0BC,0xF0BD,0xF0BE,0x00BF,
+    0x00C0,0x00C1,0x00C2,0x00C3,0x00C4,0x00C5,0x00C6,0x00C7,0x00C8,0x00C9,0x00CA,0x00CB,0x00CC,0x00CD,0x00CE,0x00CF,
+    0x00D0,0x00D1,0x00D2,0x00D3,0x00D4,0x00D5,0x00D6,0x00D7,0x00D8,0x00D9,0x00DA,0x00DB,0x00DC,0x00DD,0x00DE,0x00DF,
+    0x00E0,0x00E1,0x00E2,0x00E3,0x00E4,0x00E5,0x00E6,0x00E7,0x00E8,0x00E9,0x00EA,0x00EB,0x00EC,0x00ED,0x00EE,0x00EF,
+    0x00F0,0x00F1,0x00F2,0x00F3,0x00F4,0x00F5,0x00F6,0x00F7,0x00F8,0x00F9,0x00FA,0x00FB,0x00FC,0x00FD,0x00FE,0x221E
+};
+
+unsigned int findInTable(unsigned int *tab, unsigned wc) {
+    int i;
+    for (i = 0; i < 256; i++) {
+        if (tab[i] == wc) break;
+    }
+    return i;
+}
+
 static void InitPasm(int flags);
 
 /* functions for handling string streams */
@@ -164,7 +191,7 @@ again:
     c1 = fgetc(f);
     if (c1 < 0) return EOF;
     c2 = fgetc(f);
-    if (c2 != 0 || (c1 >= 0x80 && gl_isutf8)) {
+    if (c2 != 0 || c1 >= 0x80) {
         wchar_t w;
         size_t n;
         char buf[8];
@@ -582,6 +609,51 @@ static int MapSpinBlock(int c)
     }
 }
 
+/*
+ * fetch a string and translate it to the runtime environment
+ */
+static char *
+getTranslatedString(struct flexbuf *fb)
+{
+    char *src = flexbuf_peek(fb);
+    char *dst = src;
+    wchar_t wc;
+    int c;
+    size_t count, len;
+    
+    if (gl_run_charset != CHARSET_UTF8) {
+        // translate the UTF-8 characters into the appropriate runtime
+        // character set
+        len = strlen(src);
+        while (len) {
+            count = from_utf8(&wc, src, len);
+            if (0 > (int)count) {
+                // an error occured, punt
+                break;
+            }
+            len -= count;
+            src += count;
+            // wc is now the unicode code point
+            // translate as appropriate
+            // assume ASCII characters always map 1-1
+            if (wc >= 32 && wc <= 126) {
+                c = wc;
+            } else if (gl_run_charset == CHARSET_PARALLAX) {
+                c = findInTable(parallax_oem, wc);
+            } else {
+                c = wc;
+            }
+            if (c < 0 || c > 255) {
+                c = 0xbf; // upside down question mark in latin-1
+            }
+            *dst++ = c;
+            if (!c) break;
+        }
+        *dst = 0;
+    }
+    return flexbuf_get(fb);
+}
+
 /* parse an identifier */
 static int
 parseSpinIdentifier(LexStream *L, AST **ast_ptr, const char *prefix)
@@ -839,7 +911,7 @@ parseLineAsString(LexStream *L, AST **ast_ptr)
     flexbuf_addchar(&fb, 10);
     flexbuf_addchar(&fb, '\0');
 
-    ast->d.string = flexbuf_get(&fb);
+    ast->d.string = getTranslatedString(&fb);
     *ast_ptr = ast;
 }
 
@@ -866,7 +938,7 @@ parseString(LexStream *L, AST **ast_ptr)
     }
     flexbuf_addchar(&fb, '\0');
 
-    ast->d.string = flexbuf_get(&fb);
+    ast->d.string = getTranslatedString(&fb);
     *ast_ptr = ast;
 }
 
@@ -928,7 +1000,7 @@ parseBacktickString(LexStream *L, AST **ast_ptr, int first)
     }
     flexbuf_addchar(&fb, '\0');
 
-    ast->d.string = flexbuf_get(&fb);
+    ast->d.string = getTranslatedString(&fb);
     if (ast->d.string[0] == 0) {
         c = lexgetc(L);
         free(ast);
@@ -1099,7 +1171,7 @@ again:
         lexungetc(L, c);
     }
     flexbuf_addchar(&fb, 0);
-    str = flexbuf_get(&fb);
+    str = getTranslatedString(&fb);
     if (str && *str) {
         ast = NewAST(AST_STRING, NULL, NULL);
         ast->d.string = str;
